<resources>
    <string name="app_name">ApplicationCapteur</string>
    <string name="message_neg">This device doesn\'t have the required sensor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Sensors</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_thermo">Temperature</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_humidity">Humidity</string>
    <string name="menu_magnetic">Magnetic Field</string>
    <string name="menu_proximity">Proximity Sensor</string>
    <string name="menu_sensors">Available Sensors</string>
</resources>