<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_menu_sensors"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_thermo"
            android:icon="@drawable/ic_menu_thermo"
            android:title="@string/menu_thermo" />
        <item
            android:id="@+id/nav_compass"
            android:icon="@drawable/ic_menu_compass"
            android:title="@string/menu_compass" />
        <item
            android:id="@+id/nav_humidity"
            android:icon="@drawable/ic_menu_humidity"
            android:title="@string/menu_humidity" />
        <item
            android:id="@+id/nav_magnetic"
            android:icon="@drawable/ic_menu_magnetic"
            android:title="@string/menu_magnetic" />
        <item
            android:id="@+id/nav_proximity"
            android:icon="@drawable/ic_menu_proximity"
            android:title="@string/menu_proximity" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>
